# Fitness-Group-Project

./: main.py  pyproject.toml  test.db
templates/: base.html  login.html  signup.html  view_routine.html
