[tool.poetry]
name = "repl_python3_beta_Fitness-Group-Project-INFO2602"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wtforms = "^2.3.3"
werkzeug = "^1.0.1"
flask = "^1.1.2"
flask-jwt = "^0.3.2"
flask-login = "^0.5.0"
sqlalchemy = "^1.4.11"
flask-wtf = "^0.14.3"
flask-cors = "^3.0.10"
flask-sqlalchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
